backend/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: moadong-ingress
  annotations:
    cert-manager.io/issuer: cloudflare-issuer-prod
spec:
  tls:
    - hosts:
        - "*.moadong.com"
      secretName: moadong-com-tls-secret
  rules:
    - host: api.moadong.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: moadong-service
                port:
                  number: 8080
