backend/prod/tailscale-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: moadong-tailscale-ingress
  namespace: moadong
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - backend
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: moadong-service
                port:
                  number: 8080
